scss/_content.scss
.about-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-left: auto;
  margin-right: auto;
  margin-top: 100px;
  margin-bottom: 50px;
  width: 90%;
  @include tablet {
    margin-top: 0;
    margin-bottom: 0;
    justify-content: space-between;
    flex-direction: row;
    width: 80%;
  }
  @include desktop {
    width: 850px;
  }
  .picture-of-me {
    // border-radius: 50%;
    width: 230px;
    height: 280px;
    object-fit: cover;
    object-position: 30%;
    // border: 4px solid $color__dark-green;
    @include tablet {
      margin-right: 20px;
    }
    @include desktop {
      margin-right: 0;
    }
  }
  p {
    width: 100%;
    @include tablet {
      width: 550px;
      align-self: center;
      color: $color__dark-grey;
    }
  }
}

.section-headers {
  text-align: center;
  text-transform: uppercase;
  margin-bottom: 70px;
  color: $color__dark-grey;
}

.about-me {
  padding: 20px 0;
  height: 70vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-bottom: 100px;
  @include tablet {
    margin-bottom: 0;
  }
}

.project {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  max-width: 1000px;
  margin: 70px auto;
  &:first-of-type {
    margin-top: 0;
  }
  &:last-of-type {
    margin-bottom: 0;
  }
  &:nth-of-type(even) {
    .main-carousel {
      order: 1;
      @include tablet {
        order: 2;
      }
    }
    .project-description {
      order: 2;
      @include tablet {
        order: 1;
      }
    }
  }
  @include tablet {
    margin: 150px auto;
    flex-direction: row;
  }
  img {
    width: 100%;
    height: auto;
    @include tablet {
      width: 450px;
      height: 250px; //CHANGE TO 100% IF YOU CAN GET IT TO WORK PROPERLY
    }
  }
  .project-description {
    width: 90%;
    align-self: center;
    color: $color__dark-grey;
    letter-spacing: 0.5px;
    margin-top: 10%;
    @include tablet {
      margin-top: 0;
      max-width: 45%;
    }
    a {
      text-decoration: none;
      text-transform: uppercase;
      color: $color__blueish;
      font-family: sans-serif;
      &:hover {
        color: $color__purple;
      }
    }
  }
}

.projects-section {
  margin-top: 20%;
  @include tablet {
    margin-top: 0;
  }
}

.main-carousel {
  align-self: center;
  width: 90%;
  @include tablet {
    width: 45%;
  }
}

.project-links {
  position: relative;
  margin-right: 20px;
  &:before {
    content: '';
    position: absolute;
    width: 100%;
    height: 2px;
    bottom: 0;
    left: 0;
    background-color: $color__purple;
    visibility: hidden;
    transform: scaleX(0);
    transition: all 0.3s ease-in-out 0s;
  }
  &:hover:before {
    visibility: visible;
    transform: scaleX(1);
  }
}

//contact me section
.contact-section {
  display: flex;
  flex-direction: column;
  width: 90%;
  margin: 0 auto 50px;
  @include desktop {
    flex-direction: row;
    width: 1000px;
  }
  .contact-form {
    width: 100%;
    @include desktop {
      width: 50%;
    }
    h4 {
      margin: 5px 0;
    }
    input {
      width: 95%;
      border: 2px solid $color__dark-green;
      border-radius: 3px;
      padding: 5px;
      @include tablet {
        width: 75%;
      }
    }
    textarea {
      width: 95%;
      height: 100px;
      border: 2px solid $color__dark-green;
      border-radius: 3px;
      padding: 5px;
      @include tablet {
        width: 75%;
      }
    }
    button {
      display: block;
      border: 2px solid $color__dark-green;
      background-color: white;
      color: $color__dark-blue;
      padding: 5px 20px;
      border-radius: 3px;
      text-transform: uppercase;
      font-weight: bold;
      &:hover {
        border-color: $color__purple;
        background-color: $color__purple;
        color: white;
        cursor: pointer;
      }
    }
  }

  .contact-information {
    width: 100%;
    @include tablet {
      width: 50%;
    }
  }

  .contact-title {
    font-weight: bold;
  }

  .contact-link {
    border: 2px solid $color__dark-green;
    border-radius: 3px;
    color: $color__dark-blue;
    text-transform: uppercase;
    padding: 5px 20px;
    text-decoration: none;
    &:hover {
      color: white;
      border-color: $color__purple;
      background-color: $color__purple;
    }
  }

  .contact-links {
    margin-top: 30px;
  }
}

.contact-me {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-bottom: 10%;
  @include tablet {
    margin-bottom: 0;
  }
}

footer {
  background-color: $color__dark-green;
  height: 50px;
  justify-content: center;
  display: flex;
  align-items: center;
  a {
    color: white;
    text-decoration: none;
    text-transform: uppercase;
    &:hover {
      cursor: pointer;
      text-decoration: underline;
    }
  }
}

.flickity-prev-next-button {
  color: $color__dark-green;
  top: 110%;
  .flickity-button-icon {
    fill: $color__dark-green;
  }
}

.carousel-cell {
  width: 100%;
  text-align: center;
}

.carousel-cell.mobile-image img {
  width: 130px;
  height: auto;
}

p {
  line-height: 1.25;
  letter-spacing: 1.1;
}

